# isc_105_p1idalmis017

./: CMakeLists.txt
punto1/: punto1Lib.c  punto1Lib.h  punto1Main.c  punto1MinUnit.c  punto1Minunit.c
punto2/: punto2Lib.c  punto2Lib.h  punto2Main.c  punto2MinUnit.c  punto2Minunit.c
punto3/: punto3Lib.c  punto3Lib.h  punto3Main.c  punto3MinUnit.c  punto3Minunit.c
punto4/: punto4Lib.c  punto4Lib.h  punto4Main.c  punto4MinUnit.c  punto4Minunit.c
